# esp32c6-blinky-no-std

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  diagram.json  espflash.toml  partitions.csv  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  initialize-command.sh  post-create.sh
docs/: README.md
scripts/: console.sh  flash-cli.sh  flash-web.sh  flash.sh
src/: main.rs
