[package]
name = "blinky_no_std"
version = "0.1.0"
authors = ["Taliesin Sisson <taliesins@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

esp-hal = { version = "0.22.0", features = [
    "esp32c6",
    #"async",
    #"embedded-hal-async",
    #"embedded-io-async",
    #"embassy-futures",
    #"embassy-sync",
] }
# esp32c6 does not pull in portable-atomic and its a single core so we can use unsafe-assume-single-core instead of critical-section
# portable-atomic = { version = "1.7.0", features = [
#     "unsafe-assume-single-core",
# ] }
esp-backtrace = { version = "0.14.1", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-println = { version = "0.11.0", features = [
    "esp32c6",
    "log",
    # See https://github.com/esp-rs/esp-template/issues/125#issuecomment-1805242140
    #"jtag-serial",
    #"auto",
    # Re-enable default features _except_ 'uart'
    "critical-section",
    "colors",
] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
embedded-svc = { version = "0.28.0", default-features = false, features = [] }
embedded-io = "0.6.1"
# esp-wifi = { version = "0.9.1", features = [
#     "esp32c6",
#     "phy-enable-usb",
#     "utils",
#     "wifi",
# ] }
heapless = { version = "0.8.0", default-features = false }
# smoltcp = { version = "0.11.0", default-features = false, features = [
#     "medium-ethernet",
#     "proto-dhcpv4",
#     "proto-igmp",
#     "proto-ipv4",
#     "socket-dhcpv4",
#     "socket-icmp",
#     "socket-raw",
#     "socket-tcp",
#     "socket-udp",
# ] }

embassy-executor = { version = "0.6.3", features = [
    #"nightly",
    #"integrated-timers",
    "arch-riscv32",
] }

riscv-rt = { version = "0.13.0", optional = true }
esp-hal-embassy = { version = "0.5.0", features = [
    "esp32c6",
    "log",

    "integrated-timers",
] }
embassy-time = { version = "0.3.2" }
embassy-time-driver = { version = "0.1.0" }
embassy-futures = { version = "0.1.1", features = ["log"] }
# embassy-sync = { version = "0.6.1" }
static_cell = { version = "2.1.0" }

[features]
default = ["rt"]
rt = ["riscv-rt"]

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
